--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-  "deploy": "vite deploy",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
-    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "nodemailer": "^6.9.15",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "thunk": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
